fix(deck-builder): adjust card display box spacing

--- a/assets/db-style.css
+++ b/assets/db-style.css
@@ -271,7 +271,7 @@ body {
     top: 140px; /* Ajusta según el espacio deseado desde la parte superior */
     right: 90px; /* Ajusta según el espacio deseado desde el borde derecho */
     width: 500px;
-    height: 500px; /* Ajusta el ancho según sea necesario */
+    height: 450px;
     padding: 20px; /* Ajusta el padding según sea necesario */
     background-color: var(--tertiary-color);
     color: var(--secondary-color);
@@ -286,7 +286,7 @@ body {
 
 /* Estilo de la barra de nombre de la baraja */
 .name-deck-bar {
-    margin-top: 0.5%;
+    margin-top: 0.75%;
     margin-right: 12%;
     position: fixed; /* Fija la barra en la parte superior de la ventana */
     top: 20px; /* Ajusta la distancia desde el borde superior */
